proj1/testing/error/incorrectNumRotors.inp
* B Beta I (AA)
HELLO WORLD